@@ -193,6 +193,21 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
+			<!-- Set memory for Surefire plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>co.enear.maven.plugins</groupId>
+				<artifactId>keepachangelog-maven-plugin</artifactId>
+				<version>2.1.1</version>
+			</plugin>
 		</plugins>
 		<extensions>
 			<!-- AUTO-DEPLOY OF DOCS TO GITHUB PAGE -->
